CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(Fitting)


SET(CMAKE_CXX_STANDARD 17)	# 更改,11改17
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPATH=\"\\\"${PROJECT_SOURCE_DIR}\\\"\"")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D${CMAKE_SYSTEM_NAME}")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")

FIND_PACKAGE(OpenCV 4 REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(Ceres REQUIRED)

FILE(GLOB_RECURSE sourcefiles "src/*.cpp")

INCLUDE_DIRECTORIES(
	"include/*"
	${Cere_INCLUDE_DIRECTORIES}
	${OPENCV_INCLUDE_DIRECTORIES}
	${Eigen_INCLUDE_DIRECTORIES}
)

ADD_EXECUTABLE(fit  ${sourcefiles})
TARGET_LINK_LIBRARIES(fit ${OpenCV_LIBS} ${CERES_LIBRARIES} ${Eigen3_LIBS})